# ids721finalproject

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  app.py  eks-deployment.yaml  eks-service.yaml  my_prometheus_values_yaml  query.txt
.github/workflows/: cicd.yml
k8s/: deployment.yaml  service.yaml
src/: main.rs
