[package]
name = "ids721-final"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.196", features = ["derive"]}
reqwest = "0.11"
serde_json = "1.0"
actix-web-prom = "0.8.0"